[package]

	name = "nono"
	version = "0.1.0"
	authors = ["James Pharaoh <james@pharaoh.uk>"]
	edition = "2021"

[features]

	default = []

	gtk-example = [
		"cairo-rs",
		"gdk",
		"gio",
		"glib",
		"gtk",
	]

	alloc-example = [
		"stats_alloc",
	]

[lib]

	name = "nono"

[[example]]

	name = "nono-cli"
	path = "examples/cli.rs"

[[example]]

	name = "nono-gtk"
	path = "examples/gtk.rs"

[[example]]

	name = "nono-alloc"
	path = "src/bin/alloc.rs"

[dependencies.cairo-rs]

	version = "0.16"
	optional = true

[dependencies.gdk]

	version = "0.16"
	optional = true

[dependencies.gio]

	version = "0.16"
	optional = true

[dependencies.glib]

	version = "0.16"
	optional = true

[dependencies.gtk]

	version = "0.16"
	optional = true

[dependencies.stats_alloc]

	version = "*"
	optional = true

[profile.release]

	lto = true

